hphp/test/zend/good/Zend/tests/errmsg_008.php.expectf

Fatal error: Can't use [] for reading in %s/errmsg_008.php on line 4
